# weather-ku

./: README.md  client.js
parser/: Cargo.toml
parser/src/: lib.rs
sample-client/: client.js  response.json
weather-ku-api/: Cargo.toml  THE VISION  TODO.md  log.txt  test.txt  vision.md
weather-ku-api/src/: main.rs  request.rs
weather-ku-backend/: Cargo.toml  features.txt  output.txt  test.txt  things-to-text.md
weather-ku-backend/src/: main.rs  parser.rs  pathfinder.rs
weather-ku-console/: Cargo.toml  TODO.md  flow.txt
weather-ku-console/src/: main.rs  parser.rs
weather-ku-web/: package-lock.json  package.json
weather-ku-web/src/: App.css  App.tsx
weather-ku-web/src/util/: WeatherData.tsx
