[package]
name = "weather-ku-api"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
parser = {path = "../parser"}
indexmap = "2.5.0"
serde_json = "1.0.128"
